{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c3919879-24a2-434b-83ac-9babfecbdc26",
            "actions": [
                {
                    "name": "headButton",
                    "type": "Button",
                    "id": "3f365351-169a-45a4-af92-566e2ccf7403",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "chestButton",
                    "type": "Button",
                    "id": "56862b55-e450-4529-b055-92a0b6dd60f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "handButton",
                    "type": "Button",
                    "id": "d5a3b93a-63e3-4eff-a060-d77226209898",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "eyesButton",
                    "type": "Button",
                    "id": "a828ba84-af21-4748-b1bd-d6bca5e2fc71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cbf0a6be-d52b-4fe9-b7e9-446d9a86474c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "headButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38ed260c-9d3d-4558-9bcf-a51ed64e79e1",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "chestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d456fa21-06a8-4064-9599-834235cc429e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "handButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ebdef8e-4cbc-4f0b-9fb1-b33a2ddb658e",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "eyesButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}